--- a/style.css
+++ b/style.css
@@ -329,8 +329,8 @@ img {
 
 .site-avatar {
   float: left;
-  width: 70px;
-  height: 70px;
+  width: 75px;
+  height: 75px;
   margin-right: 15px;
 }
 
@@ -364,11 +364,11 @@ img {
 
 .site-name {
   margin: 0;
-  color: #333;
+  color: ;
   cursor: pointer;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  font-size: 32px;
+  font-weight: 450;
+  font-size: 35px;
   letter-spacing: 1px;
 }
 
